bug fixed for mobile

--- a/index.html
+++ b/index.html
@@ -113,25 +113,25 @@
     <!--catagory-->
     <div class="container categorys" id="category-sec">
         <div class="row">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6 col-6">
                 <div class="cat1 d-flex justify-content-between align-items-center">
                     <h1>Fruits</h1>
                 <img src="images/cat1.png" alt="">
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6 col-6">
                <div class="cat2 d-flex justify-content-between align-items-center">
                 <h1>fish</h1>
                 <img src="images/cat5.png" alt="">
                </div>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6 col-6">
                 <div class="cat3 d-flex justify-content-between align-items-center">
                     <h1>meat</h1>
                     <img src="images/cat3.png" alt="">
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6 col-6">
                 <div class="cat4 d-flex justify-content-between align-items-center">
                     <h1>vegetable</h1>
                     <img src="images/cat4.png" alt="">
@@ -146,13 +146,13 @@
             <div class="col-md-6">
                 <div class="dis d-flex justify-content-between align-items-center discount-box ">
                     <div class="row discount-content-box">
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-6 col-sm-6 col-6">
                             <h1>today offer</h1>
                             <h2>healthy food</h2>
                             <p>Get 20% Off Selected Produc</p>
                             <button class="dis-btn">BUY NOW</button>
                         </div>
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-6 col-sm-6 col-6">
                             <img src="images/cat1.png" alt="">
                         </div>
                     </div>
@@ -161,13 +161,13 @@
             <div class="col-md-6">
                 <div class="dis d-flex justify-content-between align-items-center discount-box">
                     <div class="row discount-content-box">
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-6 col-sm-6 col-6">
                             <h1>today offer</h1>
                             <h2>fresh vajetables</h2>
                             <p>Get 20% Off Selected Produc</p>
                             <button class="dis-btn">BUY NOW</button>
                         </div>
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-6 col-sm-6 col-6">
                             <img src="images/cat1.png" alt="">
                         </div>
                     </div>
